[gd_scene load_steps=11 format=3 uid="uid://cj2jq0j8tj4f3"]

[ext_resource type="Script" uid="uid://4lb6ihu7fppi" path="res://components/apps/fumble/fumble.gd" id="1_v4fb6"]
[ext_resource type="FontFile" uid="uid://c7qyq2f5dk3iy" path="res://assets/fonts/Monoton-Regular.ttf" id="3_qj1tn"]
[ext_resource type="PackedScene" uid="uid://duberm11i2cqq" path="res://components/npc/profile_card_stack.tscn" id="3_vq0mq"]
[ext_resource type="Material" uid="uid://bl8moqb187o1d" path="res://components/apps/fumble/fumble_label_pride_month_material.tres" id="3_ye860"]
[ext_resource type="Script" uid="uid://dqm2ovrgiyvhg" path="res://components/apps/fumble/chats_tab.gd" id="5_hf3uq"]
[ext_resource type="PackedScene" uid="uid://cel7rmg2pea12" path="res://components/apps/fumble/fumble_battle/battle_ui.tscn" id="6_5fcgq"]
[ext_resource type="PackedScene" uid="uid://3e434irx0gng" path="res://components/apps/fumble/match_button.tscn" id="6_wfdmb"]
[ext_resource type="PackedScene" uid="uid://c02crnsc8wbvh" path="res://components/apps/fumble/chat_battle_button.tscn" id="7_jh1fk"]
[ext_resource type="PackedScene" uid="uid://cndhqbvwm63oq" path="res://components/apps/fumble/fumble_match_profile.tscn" id="8_5uoqt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ye860"]
bg_color = Color(2.22605e-07, 0.23204, 0.190425, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="Fumble" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ye860")
script = ExtResource("1_v4fb6")
window_title = "Fumble"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FumbleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
material = ExtResource("3_ye860")
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 8
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_qj1tn")
theme_override_font_sizes/font_size = 36
text = "F  U  M  B  L  E"
horizontal_alignment = 1

[node name="TeamTab" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TeamTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 12
text = "You"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Bio:"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
placeholder_text = "Write something!"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="GenderLabel" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
text = "Gender Preference"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="XHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Y"

[node name="YHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Z"

[node name="ZHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Curiosity"

[node name="CuriosityHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 12
text = "Premium Features"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Archetype: Beta"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "See your elo"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Autoswipe on all above a"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
max_length = 1
virtual_keyboard_type = 3

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2

[node name="FieldTab" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/FieldTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 5

[node name="ProfileContainer" type="Control" parent="MarginContainer/VBoxContainer/FieldTab/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="ProfileCardStack" parent="MarginContainer/VBoxContainer/FieldTab/MarginContainer/ProfileContainer" instance=ExtResource("3_vq0mq")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/FieldTab/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FieldTab/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 8

[node name="SwipeLeftButton" type="Button" parent="MarginContainer/VBoxContainer/FieldTab/MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "  🤮  "
icon_alignment = 1

[node name="SwipeRightButton" type="Button" parent="MarginContainer/VBoxContainer/FieldTab/MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "  😍  "
icon_alignment = 1

[node name="ChatsTab" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("5_hf3uq")
match_button_scene = ExtResource("6_wfdmb")
battle_button_scene = ExtResource("7_jh1fk")
match_profile_scene = ExtResource("8_5uoqt")
battle_scene = ExtResource("6_5fcgq")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ChatsTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.5

[node name="MatchContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchButton" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/MatchContainer" instance=ExtResource("6_wfdmb")]
layout_mode = 2
expand_icon = false

[node name="MatchesLabel" type="Label" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Matches: 0"

[node name="AverageMatchLabel" type="Label" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Average Match: 0"

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatBattlesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChatBattleButton" parent="MarginContainer/VBoxContainer/ChatsTab/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer2/ChatBattlesContainer" instance=ExtResource("7_jh1fk")]
layout_mode = 2

[node name="TabContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TeamButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_constants/h_separation = 8
text = " Team "
flat = true

[node name="FieldButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_constants/h_separation = 8
text = " Field "
flat = true

[node name="GameButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_constants/h_separation = 8
text = " Game "
flat = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/TeamTab/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer4/CuriosityHSlider" to="." method="_on_curiosity_h_slider_value_changed"]
